# semantic-manga-retrieval

./: .gitignore  README.md  dataset_builder.py  manga_downloader.py  pyproject.toml  requirements.txt  setup.py
clip/: clip.py  faiss_index.py  search.py  tsne_visualize.py
embedding_generators/clip/: faiss_image_index.py  faiss_text_index.py  image_embeddings.py  search.py  text_embeddings.py  tsne_visualize.py
evaluate/: recall_image.py
scripts/: build_dataset.py
src/manga_vectorizer/: __init__.py
src/manga_vectorizer/core/: __init__.py  llm_encoder.py
src/manga_vectorizer/evaluation/: __init__.py  cluster_text.py  recall_fusion.py  recall_image.py  recall_qcfr.py  recall_text.py  utils.py
src/manga_vectorizer/retrieval/: __init__.py  qcfr.py
