[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-vectorizer"
version = "1.0.0"
description = "Manga character retrieval using CLIP embeddings and LLM descriptions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sean Yi"}
]
keywords = ["manga", "anime", "character retrieval", "CLIP", "embeddings", "FAISS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "open-clip-torch>=2.20.0",
    "Pillow>=9.0.0",
    "faiss-cpu>=1.7.4",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
manga-eval-qcfr = "manga_vectorizer.evaluation.recall_qcfr:main"
manga-eval-fusion = "manga_vectorizer.evaluation.recall_fusion:main"
manga-eval-image = "manga_vectorizer.evaluation.recall_image:main"
manga-eval-text = "manga_vectorizer.evaluation.recall_text:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
